--- a/frontEnd/src/Components/ui/Player/styles.module.scss
+++ b/frontEnd/src/Components/ui/Player/styles.module.scss
@@ -50,3 +50,22 @@
   background-color: rgb(37, 37, 37);  
   border-radius: 20px;     
 }
+
+
+.absolute_side_bar {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  background-color: rgba(0,0,0,0.5);
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 13rem;
+  padding-top: 10rem;
+  
+  @media screen and (max-width: 660px) {
+    padding-right: 5rem;
+    padding-top: 10rem;
+  }
+
+}
